--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FancyTracker</string>
+
+    <string name="error_generic">An error occurred</string>
 </resources>
