--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FancyTracker</string>
 
     <string name="error_generic">An error occurred</string>
+    <string name="show_more">Show more...</string>
 </resources>
