--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title">Title:</string>
     <string name="date">Date:</string>
     <string name="description">Description:</string>
+    <string name="important">Important</string>
 </resources>
