Implemented day notes list with possibility to mark task as done Also added toolbars and changed app colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="date">Date:</string>
     <string name="description">Description:</string>
     <string name="important">Important</string>
+    <string name="done">Done</string>
+    <string name="add_note">Add note</string>
+    <string name="tasks">Tasks</string>
+    <string name="note_details">Note details</string>
 </resources>
